--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "fast-levenshtein": "^3.0.0",
     "google-fonts": "^1.0.0",
     "joi": "^17.12.3",
     "method-override": "^3.0.0",
